syntax = "proto3";

// 定义消息
/*
  编号规则: 用于在 消息二进制格式中标识您的字段
    编号1 ~ 15: 用一个字节进行编码
    编号16 ~ 2047 范围内的字段编号占用两个字节
  编号范围:
    最小字段编号是 1，最大的是 536,870,911
  编号命名:
  频繁出现的消息元素保留数字 1 到 15。
  为将来可能添加的频繁出现的元素留出一些空间。
*/
message News {
  string id = 1;
  string title = 2;
  string body = 3;
  string postImage = 4;
  repeated int32 age = 5;
}

// map：这是成对的键/值字段类型
// optional: 与 相同singular，不同之处在于您可以检查该值是否已显式设置
// singular：一个格式良好的消息可以有零个或一个这个字段（但不能超过一个）
// repeated 段类型可以在格式良好的消息中重复零次或多次。重复值的顺序将被保留
message Empty { string name = 1; }

// reserved 保留字段
// message Foo {
//   reserved 2, 15, 9 to 11;
//   reserved "foo", "bar";
// }

message NewsList { repeated News news = 1; }

service NewsService {
  rpc GetAllNews(Empty) returns (News) {}
}
